day3/07_ingress/solution-traefik/python.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - pathType: Prefix
        path: "/python"
        backend:
          service:
            name: python-service
            port:
              number: 5002
